# FASTER

./: .gitignore
analysis/: CMakeLists.txt  FASTER.ipynb  Miss Ratio Over Time.ipynb  compute.cpp  mm_miss.cpp  mm_miss_mt.cpp  mrc.cpp  raw_mm_miss.cpp
analysis/miss_ratio_over_time/: result_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000.txt  result_mm_thp_z_0.99_v_8_t_1_d_12_n_1000000000.txt  result_mm_thp_z_0.9_v_8_t_1_d_12_n_1000000000.txt  result_perf_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000_i_0.txt  result_perf_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000_i_1.txt  result_perf_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000_i_10.txt  result_perf_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000_i_100.txt  result_perf_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000_i_101.txt  result_perf_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000_i_102.txt  result_perf_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000_i_103.txt  result_perf_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000_i_104.txt  result_perf_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000_i_105.txt  result_perf_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000_i_106.txt  result_perf_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000_i_107.txt  result_perf_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000_i_108.txt  result_perf_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000_i_109.txt  result_perf_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000_i_11.txt  result_perf_mm_thp_z_0.7_v_8_t_1_d_12_n_1000000000_i_110.txt  (+1785 more)
cc/: CMakeLists.txt
cc/benchmark-dir/: CMakeLists.txt  color_remap_pmem_benchmark.cc  get_shm_value.cc  merge_miss.cc  pmem_benchmark.cc  set_shm_value.cc  shuffle_free_list.cc
cc/scripts/: hemem_bench.sh  mm_bench.sh  (+3 more)
(+23 files in other folders)
